fixBug: update post for admin refer
